--- a/index.html
+++ b/index.html
@@ -397,7 +397,9 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-logo">
+            <img src="assets/logo_w.png" alt="">
+        </div>
     </footer>
         <script src="script.js" type="text/javascript" charset="utf-8"></script>
         <script src="render-defs.js" defer></script>
