update SquadDevOps Dinamically
update SquadDevOps Dinamically

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             </span>
                             <br>
                             <button>
-                                OBTER PROJETO
+                                OBTER QUEST
                             </button>
                         </p>
                     </div>
@@ -332,32 +332,45 @@
         <section class="quinto-bloco">
             <div class="left-block">
                 <div class="smartcity"></div>
+                <div class="zoom-input inactive" onclick="zoom()"></div>
+                <div class="ranking"></div>
             </div>
             <div class="right-block">
                 <div class="box-top">
-                    <h2>Nosso prêmio</h2>
+                    <h2>Comece sua história com a SquadDevOps</h2>
+                    <h5>
+                        Deixe a dificuldade para as empresas que pedem dinossauros em seus currículos
+                    </h5>
+                    <p class="w-60">
+                        Não possui tanta experiência e esta inseguro quanto ao projeto? Nossos Dev's estão de plantão para te dar uma mentoria particular e ainda desenvolver junto com você!
+                    </p>
                 </div>
                 <div class="cards">
                     <div class="card">
                         <div class="card-header">
-                            <img src="" alt="" style="width: 150px; height: 150px;">
+                            <svg class="icon icon-money-bag"><use xlink:href="#icon-money-bag"></use></svg>
                         </div>
                         <div class="card-container">
-                            <h4>Digital</h4>
-                            <h4>Disign prêmio</h4>
-                            <span class="pd-card"></span>
-                            <a href="#" class="see_more">Leia mais <span></span></a>
+                            <h4>Prêmios mensais</h4>
+                            <p>
+                                Todos os meses um pool de premiações é distribuido aos desenvolvedores que possuem maior pontuação, os pontos resetam mensalmente.
+                                Os Rankings permanecem junto ao XP aplicado ao desenvolvedor.
+                            </p>
                         </div>
                     </div>
                     <div class="card">
                         <div class="card-header">
-                            <img src="" alt="" style="width: 150px; height: 150px;">
+                            <svg class="icon icon-chevron-21"><use xlink:href="#icon-chevron-21"></use></svg>
                         </div>
                         <div class="card-container">
-                            <h4>Digital</h4>
-                            <h4>Disign prêmio</h4>
-                            <span class="pd-card"></span>
-                            <a href="#" class="see_more">Leia mais <span></span></a>
+                            <h4>Oportunidade de crescimento real</h4>
+                            <p>
+                                São 21 Rankings, conquiste títulos, desbloqueie cursos especiais, itens, dicas e concursos secretos.
+                                Aqueles que sobem de Ranking se tornam vikings ou anciãos, o dev escolhe o título desejado.
+                                Devs com maior ranking recebem o privilégio de se tornar mentores de devs iniciantes.
+                                
+                                Ao atingir o auge do ranking você faz parte do quadro de colaboradores.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -368,31 +381,31 @@
             <div class="cards">
                 <div class="first-card">
                     <h5>Nossos</h5>
-                    <h2>Clientes</h2>
+                    <h2>Colaboradores</h2>
                     <a href="#" class="see_more">CONTATE-NOS <span></span></a>
                 </div>
                 <div class="card">
-                    <img src="" alt="" style="width: 150px; height: 150px;">
+                    <img src="./assets/collab1.jpg" alt="">
                     <h5>BLACK BIRD</h5>
                 </div>
                 <div class="card">
-                    <img src="" alt="" style="width: 150px; height: 150px;">
+                    <img src="./assets/collab1.jpg" alt="">
                     <h5>BLACK BIRD</h5>
                 </div>
                 <div class="card">
-                    <img src="" alt="" style="width: 150px; height: 150px;">
+                    <img src="./assets/collab1.jpg" alt="">
                     <h5>PROTON SOFTWARE</h5>
                 </div>
                 <div class="card">
-                    <img src="" alt="" style="width: 150px; height: 150px;">
+                    <img src="./assets/collab1.jpg" alt="">
                     <h5>ORIONA</h5>
                 </div>
                 <div class="card">
-                    <img src="" alt="" style="width: 150px; height: 150px;">
+                    <img src="./assets/collab1.jpg" alt="">
                     <h5>OTENTIC</h5>
                 </div>
                 <div class="card">
-                    <img src="" alt="" style="width: 150px; height: 150px;">
+                    <img src="./assets/collab1.jpg" alt="">
                     <h5>FORTUNE MEDIA</h5>
                 </div>
             </div>
@@ -407,6 +420,7 @@
         <script src="./modules/three/three.js"></script>
         <script src="./modules/objloader/OBJLoader.js"></script>
         <script src="./modules/mtlloader/MTLLoader.js"></script>
+        <script src="./modules/gltloader/GLTLoader.js"></script>
         <script src="./modules/orbitcontrols/OrbitControls.js"></script>
         <script src="./modules/scene/scene.js"></script>
         
