--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#">Concursos</a></li>
                     <li><a href="#">Como funciona?</a></li>
                     <li><a href="#">FAQ</a></li>
-                    <li><a href="#">PARTICIPAR</a></li>
+                    <li><a href="#" class="activate-squadform">PARTICIPAR</a></li>
                 </ul>
             </nav>
             <div class="double-header">
@@ -42,7 +42,7 @@
                     <h5>
                         <span class="warn">Chega</span> de experiências ruins com recrutadores, <span class="warn">chega</span> de esperar sua carreira.
                     </h5>
-                    <button>
+                    <button class="activate-squadform">
                         QUERO XP AGORA!
                     </button>
                 </div>
@@ -162,7 +162,7 @@
             <div class="left-block">
                 <div class="box-container">
                     <div class="call-to-action">
-                        <button>
+                        <button class="activate-squadform">
                             QUERO XP AGORA!
                         </button>
                     </div>
@@ -244,7 +244,7 @@
                                 Projeto exemplo consiste em entregar SPA alimentado pela Travel API
                             </span>
                             <br>
-                            <button>
+                            <button class="activate-squadform">
                                 OBTER QUEST
                             </button>
                         </p>
@@ -263,7 +263,7 @@
                             <span class="price">
                                 R$ 1070 
                             </span>
-                            <button>
+                            <button class="activate-squadform">
                                 OBTER QUEST
                             </button>
                         </p>
@@ -282,7 +282,7 @@
                             <span class="price">
                                 R$ 2150
                             </span>
-                            <button>
+                            <button class="activate-squadform">
                                 OBTER QUEST
                             </button>
                         </p>
@@ -301,7 +301,7 @@
                             <span class="price">
                                 R$ 1600 
                             </span>
-                            <button>
+                            <button class="activate-squadform">
                                 OBTER QUEST
                             </button>
                         </p>
@@ -320,7 +320,7 @@
                             <span class="price">
                                 R$ 2940 
                             </span>
-                            <button>
+                            <button class="activate-squadform">
                                 OBTER QUEST
                             </button>
                         </p>
@@ -378,12 +378,9 @@
         </section>
 
         <section class="sexto-bloco">
+            <h5>Nossos</h5>
+            <h2>Colaboradores</h2>
             <div class="cards">
-                <div class="first-card">
-                    <h5>Nossos</h5>
-                    <h2>Colaboradores</h2>
-                    <a href="#" class="see_more">CONTATE-NOS <span></span></a>
-                </div>
                 <div class="card">
                     <img src="./assets/collab1.jpg" alt="">
                     <h5>BLACK BIRD</h5>
