--- a/index.html
+++ b/index.html
@@ -14,15 +14,32 @@
                 <div class="logo-box">
                     <img class="logo" src="assets/logo_w.png" />
                 </div>
-                <ul class="list-menu">
-                    <li><a href="#">A Squad</a></li>
-                    <li><a href="#">Ranqueadas</a></li>
-                    <li><a href="#">Concursos</a></li>
-                    <li><a href="#">Como funciona?</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">PARTICIPAR</a></li>
-                </ul>
+                <div class="desktop-menu">
+                    <ul class="list-menu">
+                        <li><a href="#">A Squad</a></li>
+                        <li><a href="#">Ranqueadas</a></li>
+                        <li><a href="#">Concursos</a></li>
+                        <li><a href="#">Como funciona?</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">PARTICIPAR</a></li>
+                    </ul>
+                </div>
+                <div class="mobile-menu">
+                    <a class="button-menu" onclick='openNav()'>&#9776;</a>
+                    <div id="myNav" class="overlay">
+                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                        <div class="overlay-content">
+                            <li><a href="#">A Squad</a></li>
+                            <li><a href="#">Ranqueadas</a></li>
+                            <li><a href="#">Concursos</a></li>
+                            <li><a href="#">Como funciona?</a></li>
+                            <li><a href="#">FAQ</a></li>
+                            <li><a href="#">PARTICIPAR</a></li>
+                        </div>
+                    </div>
+                </div>
             </nav>
+
             <div class="double-header">
                 <div class="animate-guy">
                 <div class="code-guy"></div>
@@ -413,9 +430,22 @@
     </main>
     <footer>
         <div class="footer-logo">
-            <img src="assets/logo_w.png" alt="">
+            <img class="logo" src="assets/logo_w.png" alt="">
+        </div>
+        <div class="direitos">
+            <span><strong>2021 SquadDevOps</strong> Todos os direitos reservados.</span>
         </div>
     </footer>
+
+        <script>
+            function openNav() {
+                document.getElementById("myNav").style.width = "100%";
+            }
+
+            function closeNav() {
+                document.getElementById("myNav").style.width = "0%";
+            }
+        </script>
         <script src="script.js" type="module" charset="utf-8"></script>
         <div class="render-defs"></div>
 
