--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
         <link rel="icon" type="image/png" href="favicon.png" />
     </head>
-    <body>
+    <body data-color-mode="dark">
 
     <main>
         <header>
@@ -19,7 +19,7 @@
                     <ul class="list-menu">
                         <li><a href="#">A Squad</a></li>
                         <li><a href="#">Ranqueadas</a></li>
-                        <li><a href="#">Concursos</a></li>
+                        <li><a href="#" class="rout" data-rout="portifolio">Portifólio</a></li>
                         <li><a href="#">Como funciona?</a></li>
                         <li><a href="#">FAQ</a></li>
                         <li><a href="javascript:void(0)" class="activate-squadform">PARTICIPAR</a></li>
@@ -426,6 +426,8 @@
                 </div>
             </div>
         </section>
+
+        <section class="blockrender hidden"></section>
     </main>
     <footer>
         <div class="footer-logo">
