--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         <section class="quinto-bloco" id="howorks">
             <div class="left-block">
                 <div class="smartcity"></div>
-                <div class="zoom-input inactive" onclick="zoom()"></div>
+                <div class="zoom-input inactive"></div>
                 <div class="ranking"></div>
             </div>
             <div class="right-block">
@@ -371,27 +371,31 @@
             <div class="cards">
                 <div class="card">
                     <img src="./assets/collab1.jpg" alt="">
-                    <h5>BLACK BIRD</h5>
+                    <h5>Lucas Hiago</h5>
                 </div>
                 <div class="card">
-                    <img src="./assets/collab1.jpg" alt="">
-                    <h5>BLACK BIRD</h5>
+                    <img src="./assets/collab2.jpg" alt="">
+                    <h5>Maiterney Vilela</h5>
                 </div>
                 <div class="card">
-                    <img src="./assets/collab1.jpg" alt="">
-                    <h5>PROTON SOFTWARE</h5>
+                    <img src="./assets/collab7.jpg" alt="">
+                    <h5>André Nolasco</h5>
                 </div>
                 <div class="card">
-                    <img src="./assets/collab1.jpg" alt="">
-                    <h5>ORIONA</h5>
+                    <img src="./assets/collab3.jpg" alt="">
+                    <h5>Jessandro Benício</h5>
                 </div>
                 <div class="card">
-                    <img src="./assets/collab1.jpg" alt="">
-                    <h5>OTENTIC</h5>
+                    <img src="./assets/collab4.jpg" alt="">
+                    <h5>Hugo Leonardo</h5>
                 </div>
                 <div class="card">
-                    <img src="./assets/collab1.jpg" alt="">
-                    <h5>FORTUNE MEDIA</h5>
+                    <img src="./assets/collab5.jpg" alt="">
+                    <h5>Matheus Roberto</h5>
+                </div>
+                <div class="card">
+                    <img src="./assets/collab6.jpg" alt="">
+                    <h5>Lucas Silva</h5>
                 </div>
             </div>
 
