--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>Squadevops</title>
         <link rel="stylesheet" href="style.css" type="text/css" media="all" />
         <link rel="icon" type="image/png" href="favicon.png" />
+        <meta property='og:title' content='Squadevops better way to work'/>
+        <meta property='og:image' content='favicon.png'/>
+        <meta property='og:description' content='Experience without complications'/>
+        <meta property='og:url' content='https://www.squadevops.com/'/>
     </head>
     <body data-color-mode="dark">
 
