--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="double-header">
                 <div class="animate-guy">
                 <div class="code-guy"></div>
+                <div class="line-render"></div>
                 <div class="level-up">
                         <span>
                             SQUADEVOPS
@@ -345,7 +346,7 @@
                         </div>
                         <div class="card-container">
                             <h4 data-lang="sec5-card1-title"></h4>
-                            <p data-lang="sec5-card1-detail"></p>
+                            <p id="sec5-card1-detail" data-lang="sec5-card1-detail"></p>
                         </div>
                     </div>
                     <div class="card">
