--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property='og:description' content='Experience without complications'/>
         <meta property='og:url' content='https://www.squadevops.com/'/>
     </head>
-    <body data-color-mode="dark">
+    <body data-color-mode="dark" class="spin">
 
     <main>
         <div class="langs">
