Hotfix breakpoints notebook and mobile features
Hotfix breakpoints notebook and mobile features

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body data-color-mode="dark" class="spinOff">
    
-        <div class="chose-a-side active"></div>
+        <!-- <div class="chose-a-side active"></div> -->
 
         <main>
             <div class="langs">
