Colaborator Mayer Soft added
Colaborator Mayer Soft added

--- a/index.html
+++ b/index.html
@@ -388,6 +388,15 @@
                         <h5>Lucas Hiago</h5>
                     </div>
                     <div class="card">
+                        <img src="./assets/collab8.jpg" alt="">
+                        <h5>
+                            Mayer -
+                            <a href="https://www.mayersoft.com.br/" target="_blank">
+                                MayerSoft
+                            </a>
+                        </h5>
+                    </div>
+                    <div class="card">
                         <img src="./assets/collab2.jpg" alt="">
                         <h5>Maiterney Vilela</h5>
                     </div>
