--- a/index.html
+++ b/index.html
@@ -13,10 +13,29 @@
   <meta property="og:description" content="SQUAD gen its demand for development with a highly specialized team, immersed in a culture focused on technology and innovation.">
   <meta property="og:url" content="https://www.squadevops.com">
   
-<style>:root{--sixth-color:#06e757;--fifth-color:#4e00ff;--fourth-color:#f06135;--third-color:#ff2e40;--danger-color:#fffb00;--second-color:#e8e8e8;--primary-color:#2a2b2f;--font-bebas:"Bebas Neue", cursive;--font-ubuntu:"Ubuntu Condensed", sans-serif;--font-roboto:"Roboto", sans-serif;--bg-color:white;--outline:rgba(0, 0, 0, .1);--sm:12px;--md:16px;--lg:20px;--xl:24px;--success:#37f89b;--error:#ff1465;--space-sm:.5rem;--space-md:1rem;--space-lg:1.5rem;--space-xl:2rem;--slow:all .45s;--normal:all .3s;--fast:all .15s;--borderb:1em;--bordern:.5em;--borders:.25em;--padding-container:calc(var(--space-lg) * 2) calc(var(--space-lg) * 4);--padding-container-md:calc(var(--space-lg) * 4);--padding-container-sm:calc(var(--space-lg) * 2);--padding-top-container:0 calc(var(--space-lg) * 4)}.notifications-controller{position:fixed;right:0;bottom:0;margin:1%;display:flex;flex-direction:column;font-family:var(--font-roboto);z-index:999}*{padding:0;margin:0;box-sizing:border-box;-webkit-appearance:none;letter-spacing:1px;font-family:var(--font-bebas);font-size:var(--lg);list-style:none;border:0;background:transparent}@media only screen and (max-width: 768px){*{font-size:var(--md)}}*:focus{outline:unset}*::-webkit-scrollbar{width:1px;height:1px}*::-webkit-scrollbar-thumb{background:var(--second-color);border-radius:0}*::-webkit-scrollbar-thumb:hover{background:var(--third-color)}*::-webkit-scrollbar-track{background:transparent;border-radius:0}*:focus{outline:none;transition:var(--fast)}head>title{display:none}@media only screen and (max-width: 1550px){}@media only screen and (max-width: 1285px){}@media only screen and (max-width: 1025px){*{font-size:var(--sm)}}@media only screen and (max-width: 769px){:root{--padding-container:calc(var(--space-sm) * 2) calc(var(--space-sm) * 4);--padding-container-md:calc(var(--space-sm) * 4);--padding-container-sm:calc(var(--space-sm) * 2);--padding-top-container:0 calc(var(--space-sm) * 4)}}</style><link rel="stylesheet" href="styles.68f9e22f2936da2b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.68f9e22f2936da2b.css"></noscript></head>
+<style>:root{--sixth-color:#06e757;--fifth-color:#4e00ff;--fourth-color:#f06135;--third-color:#ff2e40;--danger-color:#fffb00;--second-color:#e8e8e8;--primary-color:#2a2b2f;--font-bebas:"Bebas Neue", cursive;--font-ubuntu:"Ubuntu Condensed", sans-serif;--font-roboto:"Roboto", sans-serif;--bg-color:white;--outline:rgba(0, 0, 0, .1);--sm:12px;--md:16px;--lg:20px;--xl:24px;--success:#37f89b;--error:#ff1465;--space-sm:.5rem;--space-md:1rem;--space-lg:1.5rem;--space-xl:2rem;--slow:all .45s;--normal:all .3s;--fast:all .15s;--borderb:1em;--bordern:.5em;--borders:.25em;--padding-container:calc(var(--space-lg) * 2) calc(var(--space-lg) * 4);--padding-container-md:calc(var(--space-lg) * 4);--padding-container-sm:calc(var(--space-lg) * 2);--padding-top-container:0 calc(var(--space-lg) * 4)}.notifications-controller{position:fixed;right:0;bottom:0;margin:1%;display:flex;flex-direction:column;font-family:var(--font-roboto);z-index:999}*{padding:0;margin:0;box-sizing:border-box;-webkit-appearance:none;letter-spacing:1px;font-family:var(--font-bebas);font-size:var(--lg);list-style:none;border:0;background:transparent}@media only screen and (max-width: 768px){*{font-size:var(--md)}}*:focus{outline:unset}*::-webkit-scrollbar{width:1px;height:1px}*::-webkit-scrollbar-thumb{background:var(--second-color);border-radius:0}*::-webkit-scrollbar-thumb:hover{background:var(--third-color)}*::-webkit-scrollbar-track{background:transparent;border-radius:0}*:focus{outline:none;transition:var(--fast)}head>title{display:none}@media only screen and (max-width: 1550px){}@media only screen and (max-width: 1285px){}@media only screen and (max-width: 1025px){*{font-size:var(--sm)}}@media only screen and (max-width: 769px){:root{--padding-container:calc(var(--space-sm) * 2) calc(var(--space-sm) * 4);--padding-container-md:calc(var(--space-sm) * 4);--padding-container-sm:calc(var(--space-sm) * 2);--padding-top-container:0 calc(var(--space-sm) * 4)}}</style><link rel="stylesheet" href="styles.fb79f5576603c23b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.fb79f5576603c23b.css"></noscript></head>
 <body>
   <app-root></app-root>
   <div class="notifications-controller"></div>
-<script src="runtime.e79048c184097003.js" type="module"></script><script src="polyfills.61ff042acda6b66e.js" type="module"></script><script src="main.b59e17e8576674dc.js" type="module"></script>
+
+  <!-- LINKEDIN PIXEL -->
+  <script type="text/javascript">
+    _linkedin_partner_id = "4055930";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+    </script><script type="text/javascript">
+    (function(l) {
+    if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+    window.lintrk.q=[]}
+    var s = document.getElementsByTagName("script")[0];
+    var b = document.createElement("script");
+    b.type = "text/javascript";b.async = true;
+    b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+    s.parentNode.insertBefore(b, s);})(window.lintrk);
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://px.ads.linkedin.com/collect/?pid=4055930&fmt=gif" />
+  </noscript>
+<script src="runtime.e79048c184097003.js" type="module"></script><script src="polyfills.61ff042acda6b66e.js" type="module"></script><script src="main.394a746670922f3d.js" type="module"></script>
 
 </body></html>
